# mcp-server-for-oscal

./: .gitignore  README.md  dotenv.example  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  update-awesome-oscal.yml
.kiro/specs/oscal-mcp-server/: design.md  requirements.md  tasks.md
.kiro/steering/: compliance-trestle.md  product.md  structure.md  tech.md  use hatch.md
conf/powers/oscal/: mcp.json
requirements/: requirements-devtest.txt
src/mcp_server_for_oscal/: config.py  main.py  oscal_agent.py
src/mcp_server_for_oscal/component_definitions/: hashes.json
src/mcp_server_for_oscal/oscal_docs/: hashes.json
src/mcp_server_for_oscal/oscal_schemas/: hashes.json  oscal_assessment-plan_schema.json  oscal_assessment-plan_schema.xsd  oscal_assessment-results_schema.json  oscal_assessment-results_schema.xsd  oscal_catalog_schema.json  oscal_complete_schema.json  oscal_complete_schema.xsd  oscal_component_schema.json  oscal_mapping_schema.json  oscal_mapping_schema.xsd  oscal_poam_schema.json  oscal_poam_schema.xsd  oscal_profile_schema.json  oscal_ssp_schema.json  oscal_ssp_schema.xsd
src/mcp_server_for_oscal/tools/: README.md  get_schema.py  list_models.py  list_oscal_resources.py  query_component_definition.py  query_documentation.py  utils.py  validate_oscal_content.py
tests/: conftest.py  test_config.py  test_file_integrity.py  test_file_integrity_integration.py  test_file_integrity_utils.py  test_integration.py  test_main.py
tests/fixtures/: invalid_component_definition.json  malformed_component_definition.json  multi_component_definition.json  sample_component_definition.json
tests/tools/: test_get_schema.py  test_list_oscal_resources.py  test_query_component_definition.py  test_validate_oscal_content.py
